<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp">

        <View
            android:id="@+id/divider"
            android:layout_width="4dp"
            android:layout_height="430dp"
            android:layout_marginTop="10dp"
            android:background="#656262"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team1_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_1"
            android:textColor="#004746"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_2"
            android:textColor="@color/teal_700"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/divider"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team1_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/team_1_score"
            android:textColor="#004746"
            android:textSize="60dp"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team1_label" />

        <TextView
            android:id="@+id/team2_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/team_2_score"
            android:textColor="@color/teal_700"
            android:textSize="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/team2_label" />

        <Button
            android:id="@+id/team1_2points"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="#004746"
            android:padding="10dp"
            android:text="@string/score_2"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team1_score" />

        <Button
            android:id="@+id/team1_3points"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="#004746"
            android:padding="10dp"
            android:text="@string/score_3"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team1_2points" />

        <Button
            android:id="@+id/team1_freeThrow"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="#004746"
            android:padding="10dp"
            android:text="@string/free_throw"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team1_3points" />

        <Button
            android:id="@+id/team2_2points"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/teal_700"
            android:padding="10dp"
            android:text="@string/score_2"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@id/team2_score" />

        <Button
            android:id="@+id/team2_3points"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/teal_700"
            android:padding="10dp"
            android:text="@string/score_3"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@id/team2_2points" />

        <Button
            android:id="@+id/team2_freeThrow"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/teal_700"
            android:padding="10dp"
            android:text="@string/free_throw"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@id/team2_3points" />

        <Button
            android:id="@+id/Reset"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#4CAF50"
            android:padding="10dp"
            android:text="@string/Reset"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/team2_freeThrow"
            app:layout_constraintStart_toStartOf="@id/team1_freeThrow"
            app:layout_constraintTop_toBottomOf="@id/divider" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>